# PLARR2020

./: .gitignore  CMakeLists.txt  README.md
Exercise01/: CMakeLists.txt
Exercise01/src/: main.cpp
Exercise02/: CMakeLists.txt
Exercise02/src/: exercise2.cpp  exercise2_bonus.cpp
Exercise03/: Evaluation.ipynb  Graph.ipynb  Training.ipynb  evaluation.py  graph.py
Exercise04/: Feature_Visualization.ipynb  requirements.txt
Exercise05/: CMakeLists.txt
Exercise05/data/: frame-000000.transform.txt  frame-000001.transform.txt  frame-000002.transform.txt  frame-000003.transform.txt  frame-000004.transform.txt  frame-000005.transform.txt  frame-000006.transform.txt  frame-000007.transform.txt  frame-000008.transform.txt  frame-000009.transform.txt  frame-000101.transform.txt  frame-000106.transform.txt  intrinsics.txt
Exercise05/src/: main.cpp
Exercise06/c++/: CMakeLists.txt
Exercise06/c++/data/: dwarf01.ply  dwarf02.ply  dwarf03.ply  dwarf04.ply  dwarf05.ply  dwarf06.ply
Exercise06/c++/src/Exercise06_1/: main.cpp
Exercise06/c++/src/Exercise06_2/: main.cpp
Exercise06/c++/src/Exercise06_3/: main.cpp
Exercise06/python/data/: dwarf00.ply
Exercise06/python/src/Exercise06_1/: main.py
Exercise06/python/src/Exercise06_2/: main.py
Exercise06/python/src/Exercise06_3/: main.py
Exercise06/src/Exercise06_1/: main.py
Exercise07/: AugmentedAutoEncoders.ipynb  aae.pth
Exercise07/src/: dataloader.py
